data/derived/fa15/progs/unify/prog2484.ml.out
Characters 93-108:
  | x::x' -> [(x*i)/10]@[((x*i) mod 10) + mulByDigit i x'];;
                                          ^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
